Fix overflow issue with dropdown

--- a/frontend/src/components/Selectors/SelectorBlock.css
+++ b/frontend/src/components/Selectors/SelectorBlock.css
@@ -19,3 +19,8 @@
   .SelectorRow * {
     display: inline-block !important;
   }
+
+
+.Menu.MultiSelect > div > div + div {
+  width: 55% !important;
+}
